# BarkBeetle

./: README.md
BarkBeetle_glitch/: CMakeLists.txt  README.md  faultier_BarkBeetle.ipynb  main.c
BarkBeetle_glitch/lib/: rp2350_playground.c  rp2350_playground.h
BarkBeetle_glitch/signals/: single-glitch.csv
BarkBeetle_simulation/: Makefile  README.md  inf.c  tree.c  tree.h
BarkBeetle_simulation/attr_info/: fea_range1.txt  fea_range2.txt  fea_range3.txt  fea_range4.txt  fea_range5.txt
BarkBeetle_simulation/benchmark/: generate_trees.py
